--- a/reg-exp/front-end/src/app/components/users/login/login.component.css
+++ b/reg-exp/front-end/src/app/components/users/login/login.component.css
@@ -1,24 +1,4 @@
 
-.mycustom {
-  height: 100%;
-  flex-direction: row;
-  display: -ms-flexbox;
-  display: -webkit-box;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding-bottom: 250px;
-  background-color: #f5f5f5;
-  position: absolute;
-  width: 100%;
-}
-
-@media (max-width: 1035px) {
-  .mycustom {
-    padding-bottom: 100px;
-  }
-}
-
 .form-signin {
   width: 100%;
   max-width: 330px;
