--- a/reg-exp/front-end/src/styles.css
+++ b/reg-exp/front-end/src/styles.css
@@ -38,3 +38,10 @@ q:before, q:after {
   content: none;
 }
 
+
+html, body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+}
+
